--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -37,8 +37,8 @@
     "\n",
     "access_token = \"3431221083-x70WehwAOdKXYeUKiORDsCEOq0Oe1wsikJYSHPi\"\n",
     "access_token_secret = \"yV57W59AmkXXsWUn4xqYejykKQuuN4BAh3fXFzQL09Qnk\"\n",
-    "api_key = \"Z4FUVpLD1aso5PzKidopHQ31y\"\n",
-    "api_secret_key = \"QZm8EmzIDTj858vsBFOlGFJJk9EDB9lYtpV7S0CshgtihxEfPx\"\n",
+    "api_key = \"XXXXXX\"\n",
+    "api_secret_key = \"XXXXXX\"\n",
     "\n",
     "\n",
     "\n",
