--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -35,8 +35,8 @@
     "pd.set_option('display.width', 1000)\n",
     "\n",
     "\n",
-    "access_token = \"3431221083-x70WehwAOdKXYeUKiORDsCEOq0Oe1wsikJYSHPi\"\n",
-    "access_token_secret = \"yV57W59AmkXXsWUn4xqYejykKQuuN4BAh3fXFzQL09Qnk\"\n",
+    "access_token = \"XXXX\"\n",
+    "access_token_secret = \"XXXX\"\n",
     "api_key = \"XXXXXX\"\n",
     "api_secret_key = \"XXXXXX\"\n",
     "\n",
